[package]
name = "flash-attention-cpu-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.flash-attention-cpu]
path = ".."

[[bin]]
name = "flash_attention"
path = "fuzz_targets/flash_attention.rs"
test = false
doc = false
bench = false
